# src/main/java/nh/recipify/domain/api/RecipeApiController.java
@@ -93,6 +93,21 @@ public class RecipeApiController {
         );
     }
 
+    record GetExploreRecipesResponse(
+        @NotNull List<ExploreRecipeDto> exploreRecipes
+    ) {}
+
+    @GetMapping("/recipes/{recipeId}/explore")
+    GetExploreRecipesResponse getExploreRecipes(@StringParameter @PathVariable long recipeId,
+                                                @RequestParam("slowdown") Optional<Long> slowDown_GetExploreRecipes) {
+        sleepFor("Getting Explore Recipes for recipe-id " + recipeId, slowDown_GetExploreRecipes);
+
+        var exploreRecipes = recipeRepository.findExploreRecipes(recipeId);
+
+        return new GetExploreRecipesResponse(exploreRecipes);
+    }
+
+
     record GetRecipeIngredientsResponse(
         @NotNull String id,
         @NotNull List<Ingredient> ingredients) {
